--- a/app/assets/styles/modules/_row.css
+++ b/app/assets/styles/modules/_row.css
@@ -5,8 +5,16 @@
         margin-right: -65px;
     }
 
+    &--gutters-large {
+        margin-right: -100px;
+    }
+
     &--gutters > * {
         padding-right: 65px;
+    }
+
+    &--gutters-large > * {
+        padding-right: 100px;
     }
 
     &__mb-md {
@@ -25,6 +33,11 @@
 
         &__medium-4--larger {
             width: 37%;
+        }
+
+        &__medium-6 {
+            float: left;
+            width: 50%;
         }
 
         &__medium-8 {
