--- a/app/assets/styles/modules/_row.css
+++ b/app/assets/styles/modules/_row.css
@@ -1,8 +1,16 @@
 .row {
     @mixin clearFix;
 
+    &--pt-5 {
+      padding-top: 80px;  
+    }
+
     &--gutters {
         margin-right: -65px;
+    }
+
+    &--gutters-small {
+        margin-right: -45px;
     }
 
     &--gutters-large {
@@ -11,6 +19,10 @@
 
     &--gutters > * {
         padding-right: 65px;
+    }
+
+    &--gutters-small > * {
+        padding-right: 45px;
     }
 
     &--gutters-large > * {
@@ -47,6 +59,57 @@
         
         &__medium-8--smaller {
             width: 63%;
+        }
+    }
+
+    @mixin atLarge {
+        &__mb-lg {
+            margin-bottom: 0;
+        }
+
+        &__large-4 {
+            float: left;
+            width: 33.33%;
+        }
+
+        &__large-4--larger {
+            width: 37%;
+        }
+
+        &__large-6 {
+            float: left;
+            width: 50%;
+        }
+
+        &__large-8 {
+            float: left;
+            width: 66.66%;
+        }
+        
+        &__large-8--smaller {
+            width: 63%;
+        }
+    }
+
+    &--equal-height-at-medium {
+        @mixin atMedium {
+            display: flex;
+        }
+
+        & > div {
+            float: none;
+            display: flex;
+        }
+    }
+
+    &--equal-height-at-large {
+        @mixin atLarge {
+            display: flex;
+        }
+
+        & > div {
+            float: none;
+            display: flex;
         }
     }
 }
