--- a/app/assets/styles/modules/_page-section.css
+++ b/app/assets/styles/modules/_page-section.css
@@ -29,8 +29,7 @@
     &--testimonials {
         background-color: #e0e6ef;
 
-        @mixin atLarge
-         {
+        @mixin atLarge {
             background: url('/assets/images/testimonials-bg.jpg') top center no-repeat;
             background-size: cover;
         }
