--- a/app/assets/styles/modules/_row.css
+++ b/app/assets/styles/modules/_row.css
@@ -1,32 +1,6 @@
 .row {
-    @mixin clearFix;
-
     &--pt-5 {
       padding-top: 80px;  
-    }
-
-    &--gutters {
-        margin-right: -65px;
-    }
-
-    &--gutters-small {
-        margin-right: -45px;
-    }
-
-    &--gutters-large {
-        margin-right: -100px;
-    }
-
-    &--gutters > * {
-        padding-right: 65px;
-    }
-
-    &--gutters-small > * {
-        padding-right: 45px;
-    }
-
-    &--gutters-large > * {
-        padding-right: 100px;
     }
 
     &__mb-md {
@@ -34,31 +8,50 @@
     }
 
     @mixin atMedium {
+        display: grid;
+        grid-template-columns: repeat(12, 1fr);
+
+        &--gutters {
+            column-gap: 5.3%;
+        }
+    
+        &--gutters-small {
+            column-gap: 3.6%;
+        }
+    
+        &--gutters-large {
+            column-gap: 8%;
+        }
+
         &__mb-md {
             margin-bottom: 0;
         }
 
-        &__medium-4 {
-            float: left;
-            width: 33.33%;
+        &__large-1,
+        &__large-2,
+        &__large-3,
+        &__large-4,
+        &__large-5,
+        &__large-6,
+        &__large-7,
+        &__large-8,
+        &__large-9,
+        &__large-10,
+        &__large-11,
+        &__large-12 {
+            grid-column: span 12;
         }
-
-        &__medium-4--larger {
-            width: 37%;
+ 
+        &__medium-4 {
+            grid-column: span 4;
         }
 
         &__medium-6 {
-            float: left;
-            width: 50%;
+            grid-column: span 6;
         }
 
         &__medium-8 {
-            float: left;
-            width: 66.66%;
-        }
-        
-        &__medium-8--smaller {
-            width: 63%;
+            grid-column: span 8;
         }
     }
 
@@ -68,26 +61,15 @@
         }
 
         &__large-4 {
-            float: left;
-            width: 33.33%;
-        }
-
-        &__large-4--larger {
-            width: 37%;
+           grid-column: span 4;
         }
 
         &__large-6 {
-            float: left;
-            width: 50%;
+            grid-column: span 6;
         }
 
         &__large-8 {
-            float: left;
-            width: 66.66%;
-        }
-        
-        &__large-8--smaller {
-            width: 63%;
+            grid-column: span 8;
         }
     }
 
@@ -104,12 +86,9 @@
 
     &--equal-height-at-large {
         @mixin atLarge {
-            display: flex;
-        }
-
-        & > div {
-            float: none;
-            display: flex;
+            & > div {
+                display: flex;
+            }
         }
     }
 }
