--- a/app/assets/styles/modules/_site-header.css
+++ b/app/assets/styles/modules/_site-header.css
@@ -77,6 +77,7 @@
         right: 20px;
         width: 26px;
         height: 24px;
+        cursor: pointer;
 
         &::before {
             content: "";
