Completed sticky header functionality.

--- a/app/assets/styles/modules/_primary-nav.css
+++ b/app/assets/styles/modules/_primary-nav.css
@@ -40,6 +40,10 @@
                 padding: 11.5px 0;
                 font-size: 1rem;
                 background-color: transparent;
+
+                &.is-current-link {
+                    color: #fabb69;
+                }
             }
         }
     }
