--- a/app/assets/styles/modules/_site-header.css
+++ b/app/assets/styles/modules/_site-header.css
@@ -10,7 +10,12 @@
     }
 
     @mixin atMedium {
+        position: fixed;
         background-color: rgba(47, 85, 114, .3);
+
+        &--dark {
+            background-color: rgba(23, 51, 72, .85);
+        }
     }
 
     &__logo {
@@ -24,12 +29,17 @@
         padding: 14px 28px;
         transition: all .3s ease-out;
         border-bottom: 4px solid transparent;
+        transform-origin: 50% 0;
 
-        @mixin atMedium{
+        @mixin atMedium {
             left: auto;
             width: auto;
             transform: none;
             padding: 25px 35px;
+
+            .site-header--dark &  {
+                transform: scale(.530);
+            }
         }
 
         &--orange {
