--- a/app/assets/styles/modules/_wrapper.css
+++ b/app/assets/styles/modules/_wrapper.css
@@ -9,6 +9,10 @@
         max-width: 970px;
     }
 
+    &--narrow {
+        max-width: 470px;
+    }
+
     .wrapper {
         padding-left: 0;
         padding-right: 0;
