--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -3,6 +3,7 @@
 @import 'base/_variables';
 @import 'base/_global';
 @import 'modules/_large-hero';
+@import 'modules/_modal';
 @import 'modules/_btn';
 @import 'modules/_feature-item';
 @import 'modules/_generic-content-container';
@@ -14,5 +15,6 @@
 @import 'modules/_section-title';
 @import 'modules/_site-footer';
 @import 'modules/_site-header';
+@import 'modules/_social-icons';
 @import 'modules/_testimonial';
 @import 'modules/_wrapper';
